Added Message Box
-Trying to implement Android support for app launching

--- a/CykieAppLauncher/CykieAppLauncher/CykieAppLauncher.csproj
+++ b/CykieAppLauncher/CykieAppLauncher/CykieAppLauncher.csproj
@@ -4,6 +4,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    <Company>CykieProductions</Company>
   </PropertyGroup>
 
   
@@ -18,5 +19,6 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="MessageBox.Avalonia" Version="2.2.0" />
   </ItemGroup>
 </Project>
