--- a/CykieAppLauncher/CykieAppLauncher.Android/CykieAppLauncher.Android.csproj
+++ b/CykieAppLauncher/CykieAppLauncher.Android/CykieAppLauncher.Android.csproj
@@ -4,17 +4,24 @@
     <TargetFramework>net7.0-android</TargetFramework>
     <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
     <Nullable>enable</Nullable>
-    <ApplicationId>com.CompanyName.CykieAppLauncher</ApplicationId>
+    <ApplicationId>com.CykieProductions.CykieAppLauncher</ApplicationId>
     <ApplicationVersion>1</ApplicationVersion>
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <AndroidPackageFormat>apk</AndroidPackageFormat>
     <AndroidEnableProfiledAot>False</AndroidEnableProfiledAot>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+    <Title>Cykie App Launcher</Title>
+    <Company>Cykie Productions</Company>
   </PropertyGroup>
 
   <ItemGroup>
     <AndroidResource Include="Icon.png">
       <Link>Resources\drawable\Icon.png</Link>
     </AndroidResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="logo.ico" />
   </ItemGroup>
 
   <ItemGroup>
