--- a/CykieAppLauncher/CykieAppLauncher.Android/Properties/AndroidManifest.xml
+++ b/CykieAppLauncher/CykieAppLauncher.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="CykieAppLauncher" android:icon="@drawable/Icon" />
+	<application android:label="Cykie App Launcher" android:icon="@drawable/Icon" android:debuggable="true" >
+	<provider
+			android:name="androidx.core.content.FileProvider"
+			android:authorities="${applicationId}.provider"
+			android:exported="false"
+			android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/provider_paths"/>
+		</provider>
+	</application>
+	
+	
+	<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+	<uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+	
 </manifest>
