--- a/CykieAppLauncher/CykieAppLauncher/CykieAppLauncher.csproj
+++ b/CykieAppLauncher/CykieAppLauncher/CykieAppLauncher.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
-    <PackageReference Include="MessageBox.Avalonia" Version="2.2.0" />
+    <PackageReference Include="Dialogs.Avalonia" Version="0.1.29" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
   </ItemGroup>
 </Project>
