--- a/CykieAppLauncher/CykieSelfUpdater/CykieSelfUpdater.csproj
+++ b/CykieAppLauncher/CykieSelfUpdater/CykieSelfUpdater.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <ImplicitUsings>false</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <PublishSingleFile>true</PublishSingleFile>
-	  <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
-	  <DebugType>embedded</DebugType>
+	  <PublishSingleFile>false</PublishSingleFile>
+	  <IncludeNativeLibrariesForSelfExtract>false</IncludeNativeLibrariesForSelfExtract>
+	  <!--<DebugType>embedded</DebugType>-->
   </PropertyGroup>
+
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="c:\windows\system32\xcopy &quot;..\CykieAppLauncher\Models&quot; &quot;$(ProjectDir)&quot; /s /y" />
